@@ -1,3 +1,5 @@
+package collections.map;
+
 import java.util.HashMap;
 import java.util.IdentityHashMap;
 
@@ -5,8 +7,8 @@ public class IdenityHashMapDemo {
     
     public static void main(String[] args) {
         HashMap m = new HashMap();
-        Integer i1 = new Integer(10);
-        Integer i2 = new Integer(10);
+        Integer i1 = Integer.valueOf(10);
+        Integer i2 = Integer.valueOf(20);
         m.put(i1, "vikas");
         m.put(i2, "Sanyam");
         System.out.println(m); //HashMap uses .equals() method to find the duplicate keys
